<resources>
    <string name="app_name">通号</string>
    <string name="title_home">主页</string>
    <string name="title_discovery">发现</string>
    <string name="title_my">我的</string>

    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_already">您已登录，无需重复登录</string>
    <string name="login_out_of_time">登录信息已过期，请重新登录</string>
    <string name="login_fail">登录失败</string>
    <string name="login_account_hint">请输入账户</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_password_remember_hint">记住密码</string>

    <string name="sign_up">注册</string>
    <string name="sign_up_success">注册成功</string>
    <string name="sign_up_fail">注册失败</string>
    <string name="sign_up_account_hint">请输入账户</string>
    <string name="sign_up_password_hint">请输入密码</string>
    <string name="sign_up_hint">我已阅读并同意</string>
    <string name="sign_up_protocol">《服务协议》</string>
    <string name="account_empty">账户为空</string>
    <string name="password_empty">密码为空</string>

    <string name="protocol">服务协议</string>
    <string name="agree_protocol">请先阅读并同意服务协议</string>

    <string name="title_my_app_update">检查更新</string>
    <string name="title_my_switch">切换账号</string>
    <string name="title_my_quit">退出登录</string>
    <string name="title_my_close">关闭应用</string>

    <string name="type_assets">资产低耗</string>
    <string name="assets_counting">资产盘点</string>
    <string name="assets_counting_in">盘点中</string>
    <string name="assets_counting_finish">盘点完成</string>
    <string name="assets_counting_uncounted">未盘点</string>
    <string name="assets_counting_counted">已盘点</string>
    <string name="assets_counting_counted_out_of_position">已盘点位置不符</string>
    <string name="assets_counting_counted_by_other">被其他人盘点</string>
    <string name="assets_counting_creator">创建人</string>
    <string name="assets_counting_total">盘点总数</string>
    <string name="assets_counting_start">开始盘点</string>
    <string name="assets_counting_detail">查看详情</string>
    <string name="assets_counting_area">盘点地区</string>
    <string name="assets_counting_addr">盘点位置</string>
    <string name="asset_inventory_no">资产存货号</string>
    <string name="asset_title">主资产描述</string>
    <string name="asset_main_coding">主资产号</string>
    <string name="asset_sec_coding">次级编码</string>
    <string name="asset_dept_title">工厂/部门</string>
    <string name="asset_room">使用人</string>
    <string name="asset_area">地区</string>
    <string name="asset_addr">位置</string>
    <string name="asset_sec_manager">二级资产管理</string>
    <string name="asset_actual_responsible">实际盘点人</string>
    <string name="asset_actual_area_addr">实际盘点位置</string>
    <string name="counting_hint">输入主资产号或次级编码</string>
    <string name="counting">GO</string>
    <string name="assets_my">我的资产</string>

    <string name="load_end">没有更多数据</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="loading">正在加载中...</string>
    <string name="title_activity_process">ProcessActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_web_brower">WebBrowerActivity</string>
</resources>
