<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/counting_task_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/inventory_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line_white_bg_gray_bottom"
        android:paddingStart="3dp"
        android:paddingTop="8dp"
        android:paddingEnd="3dp"
        android:paddingBottom="8dp"
        android:text="@string/asset_inventory_no"
        android:textColor="#333"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="3dp"
        android:paddingTop="8dp"
        android:paddingEnd="3dp"
        android:paddingBottom="8dp"
        android:textColor="#333"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asset_main_coding"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/main_coding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asset_sec_coding"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sec_coding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asset_dept_title"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/dept_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asset_room"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asset_area"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asset_addr"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/addr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asset_sec_manager"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sec_manager"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/asset_actual_responsible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asset_actual_responsible"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/actual_responsible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/asset_actual_area_addr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asset_actual_area_addr"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/actual_area_addr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>