<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".main.activity.LoginActivity">

    <com.youth.banner.Banner
        android:id="@+id/login_banner"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/login_view"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="220dp"
            android:layout_height="110dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="80dp"
            android:background="@drawable/logo" />

        <EditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/logo"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/circle_input_50dp"
            android:drawableStart="@android:drawable/ic_menu_myplaces"
            android:hint="@string/login_account_hint"
            android:inputType="textPersonName"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/account"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/circle_input_50dp"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword" />

        <LinearLayout
            android:id="@+id/login_remember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/password_remember"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="false"
                android:gravity="center"
                tools:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login_password_remember_hint"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@+id/login_remember"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_button"
            android:text="@string/login"
            android:textColor="@color/white" />
    </RelativeLayout>
</RelativeLayout>