<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/counting_task_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/counting_task_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line_white_bg_gray_bottom"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line_white_bg_gray_bottom"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/counting_type_1"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/assets_counting_uncounted"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/counting_type_1_value"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/counting_type_1"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/counting_type_2"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/assets_counting_counted"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/counting_type_2_value"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/counting_type_2"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/counting_type_3"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/assets_counting_counted_out_of_position"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/counting_type_3_value"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/counting_type_3"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/counting_type_4"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/assets_counting_counted_by_other"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/counting_type_4_value"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/counting_type_4"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textSize="13sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line_white_bg_gray_bottom"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/counting_creator"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/assets_counting_creator"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/counting_creator_value"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@+id/counting_creator"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="@color/blue"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/counting_total"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/assets_counting_total"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/counting_total_value"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@+id/counting_total"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="@color/blue"
                android:textSize="13sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line_white_bg_gray_bottom"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/counting_create_time"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:textColor="@color/blue"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/counting_finish_time"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:textColor="@color/blue"
            android:textSize="13sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/counting_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/assets_counting_detail"
        android:textColor="@color/blue"
        android:textSize="13sp" />
</LinearLayout>